--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Trivia Game</title>
+	<title>Pokemon Trivia Game</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="assets/javascript/app.js"></script>
 </head>
 <body>
-	
+<div class="container">
+	<header id="title">
+		Pokemon Trivia Game
+	</header>
+	<section id="game-area">
+		<header id="question"></header>
+		<section id="answers"></section>
+	</section>
+	<section id="result-area" class="hidden"></section>
+	</section>
+</div>
 </body>
 </html>
