--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	</section>
 	<section id="result-area" class="hidden"></section>
 	</section>
+	<section id="end-screen" class="hidden"></section>
 </div>
 </body>
 </html>
