added endGame and resetGame logic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 	</section>
 	<section id="result-area" class="hidden"></section>
 	</section>
-	<section id="end-screen" class="hidden"></section>
+	<section id="end-screen" class="hidden">
+		<h2>Game Over!</h2>
+		<h4 id="right-answers"></h4>
+		<h4 id="wrong-answers"></h4>
+		<h4 id="percent-right"></h4>
+		<button id="restart-button">Restart</button>
+	</section>
 </div>
 </body>
 </html>
