added time limit to answering

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<section id="game-area">
 		<header id="question"></header>
 		<section id="answers"></section>
+		<section id="timer">Time remaining: <span id="countdown"></span> seconds</section>
 	</section>
 	<section id="result-area" class="hidden"></section>
 	</section>
