added images for each question

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<section id="game-area">
 		<header id="question"></header>
 		<section id="answers"></section>
+		<img id="question-image" src="" alt="question-image">
 		<section id="timer">Time remaining: <span id="countdown"></span> seconds</section>
 	</section>
 	<section id="result-area" class="hidden"></section>
